--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+:root{
+  --bgColor: #817CA5;
+  --btnColor: #A39FC1;
+  --placeholderColor:#C0BCDF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-image: url("/public/bg.jpeg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.main-container{
+  padding-top: 5rem;
+}
+.alignLeft{
+  text-align: left;
+}
+.form{
+  background-color: var(--bgColor);
+  max-width: 38%;
+  border-radius: 15px;
+  margin-left:2rem;
+}
+.form label{
   color: white;
+  font-size: 0.8rem;
+}
+form input::placeholder{
+  color: var(--placeholderColor) !important;
+}
+form select::placeholder{
+  color: var(--placeholderColor) !important;
 }
 
-.App-link {
-  color: #61dafb;
+.form .btn{
+  background-color: var(--btnColor);
+  color: var(--bgColor);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.form-review::placeholder{
+  color: white !important;
+}
+.form-input input{
+  text-align: end !important;
+}
+
+
+@media screen and (max-width:1399px) {
+  .form{
+    max-width: 45%;
+    margin-left:0rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media screen and (max-width:1199px) {
+  .form{
+    max-width: 50%;
+  
+  }
+}
+@media screen and (max-width:991px) {
+  .form{
+    max-width: 73%;
+  
+  }
+}
+@media screen and (max-width:767px) {
+  .form{
+    max-width: 100%;
+  
   }
 }
